# sentrylogger

./: CHANGELOG.md  CHANGES  README.md  example-logging.conf  pyproject.toml  requirements.txt  tox.ini
.github/: CODEOWNERS
src/sapcc_sentrylogger/: handler.py  paste.py
tests/unit/: test_sentry_handler.py
